--- a/package.json
+++ b/package.json
@@ -11,12 +11,7 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "commander": "2.9.0",
-    "got": "6.7.1",
-    "handlebars": "4.0.6",
-    "typescript": "2.1.5",
-    "url-parse": "1.1.7",
-    "validator": "6.2.1"
+    "typescript": "2.1.5"
   },
   "scripts": {
     "prepublish": "npm run build",
@@ -29,7 +24,9 @@
   },
   "keywords": [
     "Workfront",
-    "Constants",
+    "ObjCode",
+    "object",
+    "code",
     "AtTask",
     "API"
   ],
