feat: improve typings and generate the types.
Use a union type of the string contstants so consumers can actually see variants rather than `type =
TObjCode`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "noUnusedLocals": true,
     "sourceMap": true,
     "outDir": "./dist",
+    "declaration": true,
     "target": "es5"
   },
   "compileOnSave": false,
