fix: publish source to map sourcemaps work in bundlers

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "jsnext:main": "dist/objcodes.js",
   "types": "dist/objcodes.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "sideEffects": false,
   "devDependencies": {
