--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "sourceMap": true,
     "outDir": "./dist",
     "declaration": true,
-    "target": "es5"
+    "target": "es5",
+    "strict": true
   },
   "compileOnSave": false,
   "buildOnSave": false,
