--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "workfront-objcodes",
+  "name": "@workfront/objcodes",
   "version": "1.27.0",
   "description": "Definitions for all constants which can be used to interact with Workfront API",
   "main": "dist/umd/objcodes.js",
